2001-06-26 08:00 GMT -3 Luiz Rafael Culik <culik@sl.conex.net>
   +utils/hbmake/Makefile
      *Readded this file after CVS repository clean up

2001-06-26 00:40 UTC+1 JFL (mafact) <jfl@mafact.com>
   * harbour/source/vm/Classe.c
     - Hb_ClsScope() deleted (to avoid warning) till after 0.37
     - Hb_ObjGetpMethod() deleted (to avoid warning) till after 0.37
     ! Misc reformating and some braces added 

2001-06-25 14:51 GMT+1 Patrick Mast <harbour@PatrickMast.com>
   * contrib/tprepro/tprepro.prg
     * Bug fix in TranslateFile() method

2001-06-24 23:43 GMT -3 Luiz Rafael Culik <culik@sl.conex.net>
   *utils/hbmake/hbmake.prg
     * Reverted last change to hbmake, and put the file existence test on the correct place

2001-06-24 11:15 UTC-0800 Ron Pinkas <ron@profit-master.com>
   * source/vm/arrays.c
     ! Fixed but in hb_arrayDel() which caused a GPF by accessing an item beyond the array end.

2001-06-23 21:40 UTC-0800 Ron Pinkas <ron@profit-master.com>
   * contrib/rdd_ads/ads1.c
     - Removed 2 sets of parentheses in type casts where it was not needed.

2001-06-23 20:35 UTC-0800 Ron Pinkas <ron@profit-master.com>
   * contrib/rdd_ads/ads1.c
     ! Corrected 2 misplaced parentheses in type casts.

2001-06-22 11:10 UTC-0400 David G. Holm <dholm@jsd-llc.com>

  * source/vm/classes.c
    ! The file <ctype.h> must be included for the toupper() prototype.

2001-06-22 07:55 UTC-0800 Ron Pinkas <ron@profit-master.com>
   * contrib/dot/pp.prg
     + Added logic for new Idenitifier Match Marker <!AnyId!> which will only match Identifiers.

2001-06-22 07:30 UTC-0800 Ron Pinkas <ron@profit-master.com>
   * source/pp/ppcore.c
     + Added logic for new Idenitifier Match Marker <!AnyId!> which will only match Identifiers.
     + Added static BOOL IsIdentifier( char *szProspect )

   * include/hbclass.ch
     ! Changed <name> to <!name!> in 3 VO OO compatibility rules, where regular match marker was TOO generic.
     ! Reinstated default #define HB_CLS_VO
